package com.mikeescom.statepattern;

public interface State {
    public void doAction(Context context);
}
